--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <div class="container">
         <div class="contact-block">
             <a href="mailto:info@jsc-ltd.ru" class="email-header">info@jsc-ltd.ru</a>
-            <div class="logo"><img src="./img/logo.svg"></div>
+            <div class="logo"><img src="../../img/logo.svg"></div>
             <div class="phones">
-                <a href="tel:+79036263761" class="phone-link"><img src="./img/phone-call.png"> +7(903)62-63-761</a>
-                <a href="tel:+79036263761" class="phone-link"><img src="./img/whatsapp.png">+7(903)62-63-761</a>
+                <a href="tel:+79036263761" class="phone-link"><img src="../../img/phone-call.png"> +7(903)62-63-761</a>
+                <a href="tel:+79036263761" class="phone-link"><img src="../../img/whatsapp.png">+7(903)62-63-761</a>
                 <a href="call-back">Перезвоните мне</a>
             </div>
         </div>
@@ -34,26 +34,26 @@
         </div>
         <div class="form-block">
             <ul uk-accordion="multiple: true" class="uk-width-1-2 uk-margin-large-left">
-              <li class="uk-open">
-                  <a class="uk-accordion-title uk-flex uk-flex-row" href="#"><img src="./img/tick.png" class="uk-margin-right"><span>Команда профессионалов.</span></a>
+              <li >
+                  <a class="uk-accordion-title uk-flex uk-flex-row text-size-xl" href="#"><img src="../../img/tick.png" class="uk-margin-right"><span>Команда профессионалов.</span></a>
                   <div class="uk-accordion-content">
                       <p>Наша команда имеет опыт юридической работы по многочисленным направлениям более 18 лет.</p>
                   </div>
               </li>
               <li>
-                  <a class="uk-accordion-title uk-flex uk-flex-row" href="#"><img src="./img/tick.png" class="uk-margin-right"><span>Работаем под ключ</span></a>
+                  <a class="uk-accordion-title uk-flex uk-flex-row text-size-xl" href="#"><img src="../../img/tick.png" class="uk-margin-right"><span>Работаем под ключ</span></a>
                   <div class="uk-accordion-content">
                       <p>Наш багаж знаний и опыта позволяет нашим Клиентам быть уверенными в осуществлении полного комплекса услуг, необходимых для достижения преследуемого результата.</p>
                   </div>
               </li>
               <li>
-                  <a class="uk-accordion-title uk-flex uk-flex-row" href="#"><img src="./img/tick.png" class="uk-margin-right"><span>Мы сэкономим не только Ваши деньги,<br/> но и Ваше время</span></a>
+                  <a class="uk-accordion-title uk-flex uk-flex-row text-size-xl" href="#"><img src="../../img/tick.png" class="uk-margin-right"><span>Мы сэкономим не только Ваши деньги,<br/> но и Ваше время</span></a>
                   <div class="uk-accordion-content">
                       <p>Отработанные на протяжении многолетней практики алгоритмы, позволяют нам достигать поставленных целей в максимально сжатые сроки и не упускать из вида мелких деталей важных для Клиента, даже если он о них не задумывается.</p>
                   </div>
               </li>
               <li>
-                <a class="uk-accordion-title uk-flex uk-flex-row" href="#"><img src="./img/tick.png" class="uk-margin-right"><span>Гарантия результата.</span></a>
+                <a class="uk-accordion-title uk-flex uk-flex-row text-size-xl" href="#"><img src="../../img/tick.png" class="uk-margin-right"><span>Гарантия результата.</span></a>
                 <div class="uk-accordion-content">
                     <p>Наша нацеленность на защиту всех без исключения интересов Клиентов, даже тех, о которым о не догадывается сам, и наша инициативность при оказании услуг позволяет нам порой достигать результата, о котором Клиент даже не догадывался до посещения нашего офиса.</p>
                 </div>
@@ -87,31 +87,6 @@
     </div>
 </div>
 
-			<div class="news-section">
-    <div class="container">
-        <div class="title">Новости</div>
-        <div class="news-cards-block">
-            <div class="card">
-                <p>
-                    Департаментом городского имущества города Москвы принято решение об оказании государственных услуг только в ЭЛЕКТРОННОМ ВИДЕ:
-                    <br>
-                    <br>
-                    А именно с помощью регистрации на портале государственных услуг  https://oauth20.mos.ru/sps/login.jsp   
-                    <br>
-                    <br>
-                    После прохождения регистрации как физическое лицо (Генеральный директор), необходимо изготовить электронную цифровую подпись — это информация в электронно-цифровой форме, с помощью которой можно идентифицировать человека (либо юридическое лицо) без его личного присутствия.
-                </p>
-            </div>
-            <div class="card">
-                <p>
-                    НА 2018 ГОД ВВОДИТСЯ ВРЕМЕННЫЙ МОРАТОРИЙ НА ИНДЕКСАЦИЮ РЫНОЧНЫХ ГОРОДСКИХ СТАВОК АРЕНДЫ 4 500 за кв. м ПО ДЕЙСТВУЮЩИМ ДОГОВОРАМ АРЕНДЫ НЕЖИЛЫХ ПОМЕЩЕНИЙ.
-                    В целях развития благоприятного инвестиционного климата в регионе и оказания поддержки предпринимательскому сообществу Правительством Москвы на 2018 год принято решение о введении временного моратория на индексацию рыночных городских ставок аренды по действующим договорам аренды нежилых помещений.
-                    Кроме того, в целях оказания имущественной поддержки субъектам малого предпринимательства внесены изменения в постановления Правительства Москвы от 25 декабря 2012 г. № 800-ПП ( ссылка) и от 15 декабря 2017 г. № 1018-ПП в части продления действия и сохранения льготных ставок по договорам аренды нежилых помещений до 31 декабря 2018 года ( ссылка).
-                </p>
-            </div>
-        </div>
-    </div>
-</div>
 			<div class="services-section">
     <div class="container">
         <div class="title">НАШИ УСЛУГИ</div>
@@ -200,111 +175,6 @@
         </div>
     </div>
 </div>
-			<div class="banner-section">
-    <div class="container">
-        <div class="main-banner-block">
-            <div class="title">ПОЛУЧИТЬ БЕСПЛАТНУЮ КОНСУЛЬТАЦИЮ</div>
-            <div class="subtitle">Наш специалист перезвонит Вам в течение 10 минут
-            </div>
-            <button>Оставить заявку</button>
-        </div>
-    </div>
-</div>
-			<div class="large-text-section">
-    <div class="container">
-        <div class="title">Вы являетесь действующим арендатором у Департамента городского имущества? Обратите внимание!</div>
-        <ul class="list">
-            <li>- если Вы не получали уведомление о повышении рыночной ставки, то это не значит, что оно не отправлялось, в этом случае начисление задолженности со стороны ДГИ будет законным. </li>
-            <li>- если срок действия договора аренды истёк, мы не рекомендуем Вам предъявлять какие-либо претензии Департаменту городского имущества в части арендной платы, без одновременного начала процедуры выкупа арендуемого помещения (в соответствии со 159 Ф/З), так как есть риск получения от ДГИ уведомления о прекращении договора и выселении из помещения;</li>
-            <li>- если у организации есть планы по выкупу арендуемых помещений, то Вам необходимо учесть, что одной из одной из основных причин отказа в выкупе помещений является наличие долга по арендной плате. Если есть долг по арендной плате, невозможно даже начать процедуру выкупа и узнать стоимость помещения, предложенную ДГИ;</li>
-            <li>- если вы решили судить по оспариванию стоимости выкупа нежилого помещения, настоятельно рекомендуем Вам не бросать платить платежи по договору аренды. Так как  с правовой точки зрения,  до момента заключения и регистрации договора купли-продажи, вы будете пользоваться помещением на правах заключенного и действующего договора аренды. И необходимо платить за аренду не нарушать условий по действующим отношениям. При неоплате Департамент городского имущества имеет права на расторжение договора аренды в одностороннем порядке, это для Вас риск.</li>
-            <li>- если Вы планируете продать права аренды на используемые помещения, то привлекательность такой сделки для потенциального покупателя сильно зависит от величины арендной платы и наличия задолженности по договору аренды, а также возможности выкупить такое помещение по льготной цене с рассрочкой на 5 лет. </li>
-        </ul>
-    </div>
-</div>
-			<div class="banner-section">
-    <div class="container">
-        <div class="main-banner-block">
-            <div class="title">ПОЛУЧИТЬ БЕСПЛАТНУЮ КОНСУЛЬТАЦИЮ</div>
-            <div class="subtitle">Наш специалист перезвонит Вам в течение 10 минут
-            </div>
-            <button>Оставить заявку</button>
-        </div>
-    </div>
-</div>
-			<div class="useful-resources-section">
-    <div class="container">
-        <div class="title">Полезные ресурсы</div>
-        <div class="list">
-            <ul>
-                <li>1. Департамент городского имущества города Москвы: <a href="https://www.mos.ru/dgi">https://www.mos.ru/dgi</a></li>
-                <li>2. Россреестр: <a href="https://rosreestr.ru">https://rosreestr.ru</a></li>
-                <li>3. Федеральная налоговая служба: <a href="https://rmsp.nalog.ru">https://rmsp.nalog.ru</a></li>
-                <li>4. Арбитражный суд города Москвы: <a href="http://kad.arbitr.ru">http://kad.arbitr.ru</a></li>
-            </ul>
-        </div>
-    </div>
-</div>
-			<div class="questions">
-    <div class="container">
-        <div class="title">
-            Часто задаваемые вопросы
-        </div>
-        <div class="cards-block">
-            <div class="card">
-                <div class="title">
-                    От чего будет зависеть ставка аренды?
-                </div>
-                <p class="descr">
-                    Арендная плата определяется на основании независимой оценки, 
-                    которая учитывает как месторасположение объекта недвижимости, 
-                    так и его техническое состояние. 
-                    Фиксированная ставка у нас применяется только в отношении малого бизнеса
-                </p>
-            </div>
-            <div class="card">
-                <div class="title">
-                    Какие существуют риски при самостоятельном выкупе?
-                </div>
-                <p class="descr">
-                    Цена за выкуп будет для вас неприятным сюрпризом. 
-                    Если не указывать оценщикам, объективные недостатки помещения. 
-                    Оценщики, работающие с городом, проведут некорректную завышенную оценку. 
-                    Получение отказа, если в помещении иметься незаконная перепланировка. 
-                    Увеличение сроков процедуры по выкупу, о которых Вам не будет известно.
-                </p>
-            </div>
-            <div class="card-xl">
-                <div class="title">
-                    Как повлиять на стоимость помещения при выкупе?
-                </div>
-                <p class="descr">
-                    Повлиять на стоимость выкупа ни как нельзя. Но всегда возможно оспорить стоимость выкупа, путем подготовки независимой стоимости объекта недвижимого имущества.
-                </p>
-            </div>
-        </div>
-    </div>
-</div>
-			<div class="banner-gray-section">
-    <div class="container">
-        <div class="banner-block">
-            <img src="./img/banner-bg.svg" alt="bg">
-        </div>
-        <div class="title">
-            Мы выиграли много дел. Выиграем и Ваше!
-        </div>
-    </div>
-</div>
-			<div class="banner-section">
-    <div class="container">
-        <div class="main-banner-block">
-            <div class="title">ПОЛУЧИТЬ БЕСПЛАТНУЮ КОНСУЛЬТАЦИЮ</div>
-            <div class="subtitle">Наш специалист перезвонит Вам в течение 10 минут
-            </div>
-            <button>Оставить заявку</button>
-        </div>
-    </div>
-</div>
 			<div class="price-section">
     <div class="container">
         <div class="title">НАША ЦЕНОВАЯ ПОЛИТИКА</div>
@@ -313,19 +183,19 @@
                 <div class="title" uk-tooltip="title: <span class='window-descr'> Наш опыт позволяет нам успешно интегрироваться в Бизнес планы наших Клиентов, что позволяет достигать им не только оправданности затрат на выкуп недвижимости в отдельности, но и создать в последствии самостоятельную возможность выгодной перепродажи объекта</span>; pos: bottom">
                     ЦЕНА С УЧЕТОМ ИНВЕСТИЦИОННЫХ ЦЕЛЕЙ
                 </div>
-                <img src="./img/arrow_icon.svg" alt="arrow">
+                <img src="../../img/arrow_icon.svg" alt="arrow">
             </div>
             <div class="card">
                 <div class="title" uk-tooltip="title: <span class='window-descr'>Мы готовы предоставим Вам бесплатную первую устную консультацию</span>; pos: bottom">
                     БОНУС ПРИ ПЕРВОМ ВИЗИТЕ В НАШ ОФИС
                 </div>
-                <img src="./img/arrow_icon.svg" alt="arrow">
+                <img src="../../img/arrow_icon.svg" alt="arrow">
             </div>
             <div class="card">
                 <div class="title" uk-tooltip="title: <ul class='list'><li>Первичная консультация – бесплатно</li><li>Ведение дела по иску ДГИ г. Москвы к Клиенту – от 25 000 рублей</li><li>Ведение дела по иску Клиента к ДГИ г. Москвы – от 100 000 рублей</li><li>Юридическое сопровождение сделок с коммерческой недвижимостью – от 50 000 рублей</li><li>Услуги, связанные с участием в торгах – от 30 000 рублей</li><li>Переписка с ДГИ г. Москвы, в том числе по вопросам льготной ставки – от 25 000 рублей</li></ul>; pos: bottom">
                     БАЗОВЫЕ РАСЦЕНКИ НА НАШИ УСЛУГИ
                 </div>
-                <img src="./img/arrow_icon.svg" alt="arrow">
+                <img src="../../img/arrow_icon.svg" alt="arrow">
             </div>
         </div>
     </div>
