--- a/index.html
+++ b/index.html
@@ -89,48 +89,48 @@
 
 			<div class="services-section">
     <div class="container">
-        <div class="title">НАШИ УСЛУГИ</div>
+        <div class="title">Наши услуги</div>
         <div class="cards-block">
             <div class="list">
                 <div class="list-title">Недвижимость в собственности города:</div>
                   <ul class='left-list uk-visible@m'>
                     <li>
-                      <span uk-tooltip="title: <span class='title-xl'>Сопровождение участия Клиентов в торгах организуемых городом за право аренды помещения/зданий, включающее:</span><ul class='uk-padding-small'><li>организацию получения ЭЦП.</li><li>регистрацию на порталах</li><li>мониторинг информационных ресурсов</li><li>направление заявки на участие</li><li>непосредственное участие в торгах;</li><li>регистрацию договора аренды после его заключения по результатам проведения торгов.</li></ul>; pos: right" aria-expanded="false">
+                      <span uk-tooltip="title: <span class='title-xl'>Сопровождение участия Клиентов в торгах организуемых городом за право аренды помещения/зданий, включающее:</span><ul class='uk-padding-small'><li>организацию получения ЭЦП</li><li>регистрацию на порталах</li><li>мониторинг информационных ресурсов</li><li>направление заявки на участие</li><li>непосредственное участие в торгах;</li><li>регистрацию договора аренды после его заключения по результатам проведения торгов</li></ul>; pos: right" aria-expanded="false">
                         1.	ЕСЛИ ЦЕЛЬ – ЧТО-ТО ВЗЯТЬ В АРЕНДУ >></span>
                     </li>
                     <li>
-                      <span uk-tooltip="title: <span class='title-xl'>Юридическое сопровождение пролонгации арендных отношений с ДГИ г. Москвы, включающее:</span><ul class='uk-padding-small'><li>организацию получения ЭЦП.</li><li>регистрацию на порталах</li><li>направление соответствующего обращения в ДГИ г. Москвы</li><li>получение проекта доп. соглашения к договору аренды</li><li>регистрацию доп. соглашения.</li></ul>; pos: right" aria-expanded="false">2.	ЕСЛИ ЦЕЛЬ – ПРОДЛИТЬ АРЕНДУ >></span></span>
+                      <span uk-tooltip="title: <span class='title-xl'>Юридическое сопровождение пролонгации арендных отношений с ДГИ г. Москвы, включающее:</span><ul class='uk-padding-small'><li>организацию получения ЭЦП</li><li>регистрацию на порталах</li><li>направление соответствующего обращения в ДГИ г. Москвы</li><li>получение проекта доп. соглашения к договору аренды</li><li>регистрацию доп. соглашения</li></ul>; pos: right" aria-expanded="false">2.	ЕСЛИ ЦЕЛЬ – ПРОДЛИТЬ АРЕНДУ >></span></span>
                     </li>
                     <li>
-                      <span uk-tooltip="title: <span class='title-xl'>Юридическое сопровождение получения льготной арендной ставки, включающее:</span><ul class='uk-padding-small'><li>организацию получения ЭЦП.</li><li>регистрацию на порталах</li><li>подбор комплекта документов в обоснование льготы</li><li>направление соответствующего обращения в ДГИ г. Москвы</li><li>получения уведомления о ставке арендной платы.</li></ul>; pos: right" aria-expanded="false">3.	ЕСЛИ ЦЕЛЬ – ПОЛУЧИТЬ ЛЬГОТУ ПО АРЕНДЕ >></span><span class="icon" aria-hidden="true"></span></button>
+                      <span uk-tooltip="title: <span class='title-xl'>Юридическое сопровождение получения льготной арендной ставки, включающее:</span><ul class='uk-padding-small'><li>организацию получения ЭЦП</li><li>регистрацию на порталах</li><li>подбор комплекта документов в обоснование льготы</li><li>направление соответствующего обращения в ДГИ г. Москвы</li><li>получения уведомления о ставке арендной платы</li></ul>; pos: right" aria-expanded="false">3.	ЕСЛИ ЦЕЛЬ – ПОЛУЧИТЬ ЛЬГОТУ ПО АРЕНДЕ >></span><span class="icon" aria-hidden="true"></span></button>
                     </li>
                     <li class="accordion-item">
-                      <span uk-tooltip="title:<ul class='uk-padding-small'><li>Юридическое сопровождение реализации преимущественного права выкупа МСП, включающее организацию получения ЭЦП, регистрацию на порталах, подбор комплекта документов, направление соответствующего обращения в ДГИ г. Москвы, получение проекта договора купли-продажи, регистрацию договора купли-продажи</li><li>Юридическое сопровождение оспаривания отказа в реализации преимущественного права в судебном порядке</li><li>Юридическое сопровождение оспаривания цены объекта, предлагаемой ДГИ г. Москвы, а также других положений договора купли-продажи, необоснованно навязываемых МСП и влекущих для него дополнительные расходы и обязанности, в судебном порядке.</li></ul>; pos: right" aria-expanded="false">4.	ЕСЛИ ЦЕЛЬ – ВЫКУПИТЬ >></span></span>
+                      <span uk-tooltip="title: <ul class='uk-padding-small'><li>Юридическое сопровождение реализации преимущественного права выкупа МСП, включающее организацию получения ЭЦП, регистрацию на порталах, подбор комплекта документов, направление соответствующего обращения в ДГИ г. Москвы, получение проекта договора купли-продажи, регистрацию договора купли-продажи</li><li>Юридическое сопровождение оспаривания отказа в реализации преимущественного права в судебном порядке</li><li>Юридическое сопровождение оспаривания цены объекта, предлагаемой ДГИ г. Москвы, а также других положений договора купли-продажи, необоснованно навязываемых МСП и влекущих для него дополнительные расходы и обязанности, в судебном порядке</li></ul>; pos: right" aria-expanded="false">4.	ЕСЛИ ЦЕЛЬ – ВЫКУПИТЬ >></span></span>
                     </li>
                 </ul>
                 <ul uk-accordion="multiple: true" class="mob-list-left uk-hidden@m">
                   <li class="uk-open">
                       <a class="uk-accordion-title uk-text-emphasis title-mob-size" href="#">1.	ЕСЛИ ЦЕЛЬ – ЧТО-ТО ВЗЯТЬ В АРЕНДУ >></a>
                       <div class="uk-accordion-content">
-                        <span class='title-xl'>Сопровождение участия Клиентов в торгах организуемых городом за право аренды помещения/зданий, включающее:</span><ul class='uk-padding-small'><li>организацию получения ЭЦП.</li><li>регистрацию на порталах</li><li>мониторинг информационных ресурсов</li><li>направление заявки на участие</li><li>непосредственное участие в торгах;</li><li>регистрацию договора аренды после его заключения по результатам проведения торгов.</li></ul>
+                        <span class='title-xl'>Сопровождение участия Клиентов в торгах организуемых городом за право аренды помещения/зданий, включающее:</span><ul class='uk-padding-small'><li>организацию получения ЭЦП</li><li>регистрацию на порталах</li><li>мониторинг информационных ресурсов</li><li>направление заявки на участие</li><li>непосредственное участие в торгах;</li><li>регистрацию договора аренды после его заключения по результатам проведения торгов</li></ul>
                       </div>
                   </li>
                   <li>
                       <a class="uk-accordion-title uk-text-emphasis title-mob-size" href="#">2.	ЕСЛИ ЦЕЛЬ – ПРОДЛИТЬ АРЕНДУ >></a>
                       <div class="uk-accordion-content">
-                        <span class='title-xl'>Юридическое сопровождение пролонгации арендных отношений с ДГИ г. Москвы, включающее:</span><ul class='uk-padding-small'><li>организацию получения ЭЦП.</li><li>регистрацию на порталах</li><li>направление соответствующего обращения в ДГИ г. Москвы</li><li>получение проекта доп. соглашения к договору аренды</li><li>регистрацию доп. соглашения.</li></ul>
+                        <span class='title-xl'>Юридическое сопровождение пролонгации арендных отношений с ДГИ г. Москвы, включающее:</span><ul class='uk-padding-small'><li>организацию получения ЭЦП</li><li>регистрацию на порталах</li><li>направление соответствующего обращения в ДГИ г. Москвы</li><li>получение проекта доп. соглашения к договору аренды</li><li>регистрацию доп. соглашения</li></ul>
                       </div>
                   </li>
                   <li>
                       <a class="uk-accordion-title uk-text-emphasis title-mob-size" href="#">3.	ЕСЛИ ЦЕЛЬ – ПОЛУЧИТЬ ЛЬГОТУ ПО АРЕНДЕ >></a>
                       <div class="uk-accordion-content">
-                        <span class='title-xl'>Юридическое сопровождение получения льготной арендной ставки, включающее:</span><ul class='uk-padding-small'><li>организацию получения ЭЦП.</li><li>регистрацию на порталах</li><li>подбор комплекта документов в обоснование льготы</li><li>направление соответствующего обращения в ДГИ г. Москвы</li><li>получения уведомления о ставке арендной платы.</li></ul>
+                        <span class='title-xl'>Юридическое сопровождение получения льготной арендной ставки, включающее:</span><ul class='uk-padding-small'><li>организацию получения ЭЦП</li><li>регистрацию на порталах</li><li>подбор комплекта документов в обоснование льготы</li><li>направление соответствующего обращения в ДГИ г. Москвы</li><li>получения уведомления о ставке арендной платы</li></ul>
                       </div>
                   </li>
                   <li>
                     <a class="uk-accordion-title uk-text-emphasis title-mob-size" href="#">4.	ЕСЛИ ЦЕЛЬ – ВЫКУПИТЬ >></a>
                     <div class="uk-accordion-content">
-                      <span class='title-xl'>Юридическое сопровождение получения льготной арендной ставки, включающее:</span><ul class='uk-padding-small'><li>Юридическое сопровождение реализации преимущественного права выкупа МСП, включающее организацию получения ЭЦП, регистрацию на порталах, подбор комплекта документов, направление соответствующего обращения в ДГИ г. Москвы, получение проекта договора купли-продажи, регистрацию договора купли-продажи</li><li>Юридическое сопровождение оспаривания отказа в реализации преимущественного права в судебном порядке</li><li>Юридическое сопровождение оспаривания цены объекта, предлагаемой ДГИ г. Москвы, а также других положений договора купли-продажи, необоснованно навязываемых МСП и влекущих для него дополнительные расходы и обязанности, в судебном порядке.</li></ul>
+                      <span class='title-xl'>Юридическое сопровождение получения льготной арендной ставки, включающее:</span><ul class='uk-padding-small'><li>Юридическое сопровождение реализации преимущественного права выкупа МСП, включающее организацию получения ЭЦП, регистрацию на порталах, подбор комплекта документов, направление соответствующего обращения в ДГИ г. Москвы, получение проекта договора купли-продажи, регистрацию договора купли-продажи</li><li>Юридическое сопровождение оспаривания отказа в реализации преимущественного права в судебном порядке</li><li>Юридическое сопровождение оспаривания цены объекта, предлагаемой ДГИ г. Москвы, а также других положений договора купли-продажи, необоснованно навязываемых МСП и влекущих для него дополнительные расходы и обязанности, в судебном порядке</li></ul>
                     </div>
                   </li>
               </ul>
@@ -139,7 +139,7 @@
                 <div class="list-title">Сопровождение сделок с недвижимостью: </div>
                 <ul class='right-list uk-visible@m'>
                     <li>
-                      <span uk-tooltip="title: <span class='title-xl'>Юридическое сопровождение оформления сделки:</span><ul class='uk-padding-small'><li>участие в переговорах Клиентов с контрагентами</li><li>проверка полномочий подписантов</li><li>проверка соблюдения покупателем процедур корпоративного одобрения сделки</li><li>анализ возможных перспектив оспаривания сделки третьими лицами, в том числе рисков банкротства покупателя</li><li>планирование и выстраивание безопасной схемы взаиморасчетов (аккредитив/банковские ячейки)</li><li>подготовка проектов договоров/документов и представление комплекта документов для государственной регистрации перехода права собственности (в том числе сопровождение процедур у нотариуса).</li></ul>; pos: left" aria-expanded="false">
+                      <span uk-tooltip="title: <span class='title-xl'>Юридическое сопровождение оформления сделки:</span><ul class='uk-padding-small'><li>участие в переговорах Клиентов с контрагентами</li><li>проверка полномочий подписантов</li><li>проверка соблюдения покупателем процедур корпоративного одобрения сделки</li><li>анализ возможных перспектив оспаривания сделки третьими лицами, в том числе рисков банкротства покупателя</li><li>планирование и выстраивание безопасной схемы взаиморасчетов (аккредитив/банковские ячейки)</li><li>подготовка проектов договоров/документов и представление комплекта документов для государственной регистрации перехода права собственности (в том числе сопровождение процедур у нотариуса)</li></ul>; pos: left" aria-expanded="false">
                         1.	ЕСЛИ ЦЕЛЬ МИНИМИЗТРОВАТЬ РИСКИ ПРИ ПРОДАЖЕ ОБЪЕКТА >></span>
                     </li>
                     <li>
@@ -155,7 +155,7 @@
                   <li class="uk-open">
                       <a class="uk-accordion-title uk-text-emphasis title-mob-size" href="#">1.	ЕСЛИ ЦЕЛЬ МИНИМИЗТРОВАТЬ РИСКИ ПРИ ПРОДАЖЕ ОБЪЕКТА >></a>
                       <div class="uk-accordion-content">
-                        <span class='title-xl'>Юридическое сопровождение оформления сделки:</span><ul class='uk-padding-small'><li>участие в переговорах Клиентов с контрагентами</li><li>проверка полномочий подписантов</li><li>проверка соблюдения покупателем процедур корпоративного одобрения сделки</li><li>анализ возможных перспектив оспаривания сделки третьими лицами, в том числе рисков банкротства покупателя</li><li>планирование и выстраивание безопасной схемы взаиморасчетов (аккредитив/банковские ячейки)</li><li>подготовка проектов договоров/документов и представление комплекта документов для государственной регистрации перехода права собственности (в том числе сопровождение процедур у нотариуса).</li></ul>
+                        <span class='title-xl'>Юридическое сопровождение оформления сделки:</span><ul class='uk-padding-small'><li>участие в переговорах Клиентов с контрагентами</li><li>проверка полномочий подписантов</li><li>проверка соблюдения покупателем процедур корпоративного одобрения сделки</li><li>анализ возможных перспектив оспаривания сделки третьими лицами, в том числе рисков банкротства покупателя</li><li>планирование и выстраивание безопасной схемы взаиморасчетов (аккредитив/банковские ячейки)</li><li>подготовка проектов договоров/документов и представление комплекта документов для государственной регистрации перехода права собственности (в том числе сопровождение процедур у нотариуса)</li></ul>
                       </div>
                   </li>
                   <li>
@@ -177,25 +177,25 @@
 </div>
 			<div class="price-section">
     <div class="container">
-        <div class="title">НАША ЦЕНОВАЯ ПОЛИТИКА</div>
+        <div class="title">Наша ценовая политика</div>
         <div class="cards-block">
             <div class="card">
                 <div class="title" uk-tooltip="title: <span class='window-descr'> Наш опыт позволяет нам успешно интегрироваться в Бизнес планы наших Клиентов, что позволяет достигать им не только оправданности затрат на выкуп недвижимости в отдельности, но и создать в последствии самостоятельную возможность выгодной перепродажи объекта</span>; pos: bottom">
                     ЦЕНА С УЧЕТОМ ИНВЕСТИЦИОННЫХ ЦЕЛЕЙ
                 </div>
-                <img src="../img/arrow_icon.svg" alt="arrow">
+                <img src="../../img/arrow_icon.svg" alt="arrow">
             </div>
             <div class="card">
                 <div class="title" uk-tooltip="title: <span class='window-descr'>Мы готовы предоставим Вам бесплатную первую устную консультацию</span>; pos: bottom">
                     БОНУС ПРИ ПЕРВОМ ВИЗИТЕ В НАШ ОФИС
                 </div>
-                <img src="../img/arrow_icon.svg" alt="arrow">
+                <img src="../../img/arrow_icon.svg" alt="arrow">
             </div>
             <div class="card">
                 <div class="title" uk-tooltip="title: <ul class='list'><li>Первичная консультация – бесплатно</li><li>Ведение дела по иску ДГИ г. Москвы к Клиенту – от 25 000 рублей</li><li>Ведение дела по иску Клиента к ДГИ г. Москвы – от 100 000 рублей</li><li>Юридическое сопровождение сделок с коммерческой недвижимостью – от 50 000 рублей</li><li>Услуги, связанные с участием в торгах – от 30 000 рублей</li><li>Переписка с ДГИ г. Москвы, в том числе по вопросам льготной ставки – от 25 000 рублей</li></ul>; pos: bottom">
                     БАЗОВЫЕ РАСЦЕНКИ НА НАШИ УСЛУГИ
                 </div>
-                <img src="../img/arrow_icon.svg" alt="arrow">
+                <img src="../../img/arrow_icon.svg" alt="arrow">
             </div>
         </div>
     </div>
