--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <div class="container">
         <div class="contact-block">
             <a href="mailto:info@jsc-ltd.ru" class="email-header">info@jsc-ltd.ru</a>
-            <div class="logo"><img src="../../img/logo.svg"></div>
+            <div class="logo"><img src="./img/logo.svg"></div>
             <div class="phones">
-                <a href="tel:+79036263761" class="phone-link"><img src="../../img/phone-call.png"> +7(903)62-63-761</a>
-                <a href="tel:+79036263761" class="phone-link"><img src="../../img/whatsapp.png">+7(903)62-63-761</a>
+                <a href="tel:+79036263761" class="phone-link"><img src="./img/phone-call.png"> +7(903)62-63-761</a>
+                <a href="tel:+79036263761" class="phone-link"><img src="./img/whatsapp.png">+7(903)62-63-761</a>
                 <a href="call-back">Перезвоните мне</a>
             </div>
         </div>
@@ -35,25 +35,25 @@
         <div class="form-block">
             <ul uk-accordion="multiple: true" class="uk-width-1-2 uk-margin-large-left">
               <li >
-                  <a class="uk-accordion-title uk-flex uk-flex-row text-size-xl" href="#"><img src="../../img/tick.png" class="uk-margin-right"><span>Команда профессионалов.</span></a>
+                  <a class="uk-accordion-title uk-flex uk-flex-row text-size-xl" href="#"><img src="./img/tick.png" class="uk-margin-right"><span>Команда профессионалов.</span></a>
                   <div class="uk-accordion-content">
                       <p>Наша команда имеет опыт юридической работы по многочисленным направлениям более 18 лет.</p>
                   </div>
               </li>
               <li>
-                  <a class="uk-accordion-title uk-flex uk-flex-row text-size-xl" href="#"><img src="../../img/tick.png" class="uk-margin-right"><span>Работаем под ключ</span></a>
+                  <a class="uk-accordion-title uk-flex uk-flex-row text-size-xl" href="#"><img src="./img/tick.png" class="uk-margin-right"><span>Работаем под ключ</span></a>
                   <div class="uk-accordion-content">
                       <p>Наш багаж знаний и опыта позволяет нашим Клиентам быть уверенными в осуществлении полного комплекса услуг, необходимых для достижения преследуемого результата.</p>
                   </div>
               </li>
               <li>
-                  <a class="uk-accordion-title uk-flex uk-flex-row text-size-xl" href="#"><img src="../../img/tick.png" class="uk-margin-right"><span>Мы сэкономим не только Ваши деньги,<br/> но и Ваше время</span></a>
+                  <a class="uk-accordion-title uk-flex uk-flex-row text-size-xl" href="#"><img src="./img/tick.png" class="uk-margin-right"><span>Мы сэкономим не только Ваши деньги,<br/> но и Ваше время</span></a>
                   <div class="uk-accordion-content">
                       <p>Отработанные на протяжении многолетней практики алгоритмы, позволяют нам достигать поставленных целей в максимально сжатые сроки и не упускать из вида мелких деталей важных для Клиента, даже если он о них не задумывается.</p>
                   </div>
               </li>
               <li>
-                <a class="uk-accordion-title uk-flex uk-flex-row text-size-xl" href="#"><img src="../../img/tick.png" class="uk-margin-right"><span>Гарантия результата.</span></a>
+                <a class="uk-accordion-title uk-flex uk-flex-row text-size-xl" href="#"><img src="./img/tick.png" class="uk-margin-right"><span>Гарантия результата.</span></a>
                 <div class="uk-accordion-content">
                     <p>Наша нацеленность на защиту всех без исключения интересов Клиентов, даже тех, о которым о не догадывается сам, и наша инициативность при оказании услуг позволяет нам порой достигать результата, о котором Клиент даже не догадывался до посещения нашего офиса.</p>
                 </div>
@@ -183,19 +183,19 @@
                 <div class="title" uk-tooltip="title: <span class='window-descr'> Наш опыт позволяет нам успешно интегрироваться в Бизнес планы наших Клиентов, что позволяет достигать им не только оправданности затрат на выкуп недвижимости в отдельности, но и создать в последствии самостоятельную возможность выгодной перепродажи объекта</span>; pos: bottom">
                     ЦЕНА С УЧЕТОМ ИНВЕСТИЦИОННЫХ ЦЕЛЕЙ
                 </div>
-                <img src="../../img/arrow_icon.svg" alt="arrow">
+                <img src="./img/arrow_icon.svg" alt="arrow">
             </div>
             <div class="card">
                 <div class="title" uk-tooltip="title: <span class='window-descr'>Мы готовы предоставим Вам бесплатную первую устную консультацию</span>; pos: bottom">
                     БОНУС ПРИ ПЕРВОМ ВИЗИТЕ В НАШ ОФИС
                 </div>
-                <img src="../../img/arrow_icon.svg" alt="arrow">
+                <img src="./img/arrow_icon.svg" alt="arrow">
             </div>
             <div class="card">
                 <div class="title" uk-tooltip="title: <ul class='list'><li>Первичная консультация – бесплатно</li><li>Ведение дела по иску ДГИ г. Москвы к Клиенту – от 25 000 рублей</li><li>Ведение дела по иску Клиента к ДГИ г. Москвы – от 100 000 рублей</li><li>Юридическое сопровождение сделок с коммерческой недвижимостью – от 50 000 рублей</li><li>Услуги, связанные с участием в торгах – от 30 000 рублей</li><li>Переписка с ДГИ г. Москвы, в том числе по вопросам льготной ставки – от 25 000 рублей</li></ul>; pos: bottom">
                     БАЗОВЫЕ РАСЦЕНКИ НА НАШИ УСЛУГИ
                 </div>
-                <img src="../../img/arrow_icon.svg" alt="arrow">
+                <img src="./img/arrow_icon.svg" alt="arrow">
             </div>
         </div>
     </div>
